import { Headings, options, styles } from './index'

import {
  getListTemplate,
  getTemplate,
  getOptionsArgTypes,
} from '../../helpers/storybook'

const Template = getTemplate(Headings, styles)
const ListTemplate = getListTemplate(Headings, styles)

export default {
  title: 'Atoms/Headings',
  component: Headings,
  args: {
    children: 'Consent doubt Tuckborough challenge destroying.',
  },
  argTypes: {
    color: getOptionsArgTypes(options.colors),
    size: getOptionsArgTypes(options.sizes),
    weight: getOptionsArgTypes(options.weights),
    children: { control: 'text' },
  },
}

export const Default = Template.bind({})
Default.args = {
  children: 'testing',
}

export const Colors = ListTemplate.bind({})
Colors.args = {
  items: options.colors.map((color) => ({ color })),
  children: 'testing',
}

export const Sizes = ListTemplate.bind({})
Sizes.args = {
  items: options.sizes.map((size) => ({ size })),
  children: 'testing',
}

export const Weights = ListTemplate.bind({})
Weights.args = {
  items: options.weights.map((weight) => ({ weight })),
  children: 'testing',
}
